--- a/assets/css/landing.css
+++ b/assets/css/landing.css
@@ -7,6 +7,9 @@
 body {
     background-color: var(--White);
 }
+svg {
+    color: black;
+}
 * {
     margin: 0;
     padding: 0;
@@ -121,6 +124,11 @@ nav ul li a {
     display: none;
 }
 /*SECTION*/
+section {
+    display: flex;
+    flex-direction: column;
+    gap: 60px;
+}
 .content-1-top {
     margin-top: 20px;
     padding-inline: 20px;
@@ -159,4 +167,21 @@ nav ul li a {
     font-weight: 400;
     line-height: 28px;
     border-radius: 14px;
+}
+/*SECTION - 2*/
+.section-content-2 {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+}
+.company-top {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+.company-bot {
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+    gap: 70px;
 }
