--- a/assets/css/landing.css
+++ b/assets/css/landing.css
@@ -253,3 +253,77 @@ section {
     border-radius: 14px;
     border: none;
 }
+.swiper {
+    width: 100%;
+    height: 100%;
+  }
+
+  .swiper-slide {
+    text-align: center;
+    font-size: 18px;
+    background: #fff;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .swiper-slide img {
+    display: block;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+  }
+/*SECTION-4 CASE */
+.section-content-4 {
+    display: flex;
+    flex-direction: column;
+    gap: 40px;
+    padding-inline: 20px;
+}
+.case-studies {
+    display: flex;
+    flex-direction: column;
+    gap: 30px;
+    align-items: center;
+}
+.case-studies h2 {
+    background-color: var(--Green);
+    padding-inline: 7px;
+    border-radius: 7px;
+    font-size: 36px;
+    font-weight: 500;
+    line-height: normal;
+}
+.case-studies p {
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 24px; /* 150% */ 
+}
+.case-studies-exams {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    padding: 42px 50px;
+    border-radius: 45px;
+    background-color: var(--Dark);
+}
+.exams {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    color: var(--White);
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 24px; /* 150% */
+}
+.exams a {
+    display: flex;
+    align-items: center;
+    color: var(--Green);
+    gap: 15px;
+    font-size: 20px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 28px; /* 140% */
+    text-decoration: none;
+}
