--- a/assets/css/landing.css
+++ b/assets/css/landing.css
@@ -416,3 +416,31 @@ section {
     line-height: 28px;
     border-radius: 14px;
 }
+/*SECTION CONTENT 7*/
+.section-content-7 {
+    display: flex;
+    flex-direction: column;
+    padding-inline: 20px;
+    gap: 40px;
+}
+.testimonials {
+    display: flex;
+    flex-direction: column;
+    gap: 30px;
+    align-items: center;
+    justify-content: center;
+}
+.testimonials h3 {
+    padding-inline: 7px;
+    background-color: var(--Green);
+    border-radius: 7px;
+    font-size: 36px;
+    font-weight: 500;
+    line-height: normal;
+}
+.testimonials p {
+    text-align: center;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 24px; /* 150% */
+}
