--- a/assets/css/swiper.css
+++ b/assets/css/swiper.css
@@ -22,6 +22,9 @@
 /* Kaydırılan Alan */
 .slider {
     display: flex;
+    flex-direction: column;
+    gap: 60px;
+    padding: 30px 30px 60px 30px;
     transition: transform 0.5s ease-in-out;
 }
 
@@ -31,9 +34,30 @@
     box-sizing: border-box;
     display: none;
 }
-
+.slide-top {
+    border: 1px solid var(--Green);
+    padding: 30px 30px 32px 30px;
+    border-radius: 30px;
+}
+.slide-bot {
+    display: flex;
+    flex-direction: column;
+    align-items: end;
+}
+.slide-bot h3 {
+    color: var(--Green);
+    font-size: 18px;
+    font-weight: 600;
+    line-height: normal;
+}
+.slide-bot p {
+    font-size: 16px;
+    font-weight: 400;
+}
 .slide.active {
-    display: block;
+    display: flex;
+    flex-direction: column;
+    gap: 20px    ;
 }
 
 /* Butonlar */
