--- a/assets/css/landing.css
+++ b/assets/css/landing.css
@@ -444,3 +444,8 @@ section {
     font-weight: 400;
     line-height: 24px; /* 150% */
 }
+/*FOOTER*/
+footer {
+    width: 100%;
+    background-color: var(--Dark);
+}
