--- a/assets/css/accordion.css
+++ b/assets/css/accordion.css
@@ -3,13 +3,14 @@
     padding-inline: 20px;
 }
 .accordion-item {
-    background: #f8f8f8; /* Açık gri arka plan */
-    border-radius: 45px; /* Kenarları yuvarlat */
+    background: #f8f8f8;
+    border-radius: 45px;
     margin-bottom: 12px;
-    border: 2px solid black; /* Siyah ince çerçeve */
-    box-shadow: 3px 3px 0px black; /* Hafif kaydırılmış siyah gölge */
+    border: 2px solid black;
+    box-shadow: 3px 3px 0px black;
     overflow: hidden;
-    transition: all 0.3s ease-in-out; /* Geçiş efekti */
+    transition: all 0.3s ease-in-out;
+    padding: 30px 30px;
 }
 
 .accordion-item.active {
