--- a/assets/css/landing.css
+++ b/assets/css/landing.css
@@ -28,7 +28,6 @@ svg {
 /*HEADER MOBİL SÜRÜM*/
 header {
     margin-top: 20px;
-    width: 100%;
     padding-inline: 20px;
     display: flex;
     gap: 222px;
@@ -660,7 +659,13 @@ footer {
     line-height: 24px; /* 150% */
     color: var(--White);
 }
-@media only screen and (min-width:431px) {
+@media (min-width:1206px) {
+    header {
+        width: 100%;
+        margin-top: 80px;
+        padding-inline: 100px;
+        justify-content: space-between;
+    }
     .container-posivitus {
         margin: 0 auto;
         display: flex;
@@ -671,8 +676,34 @@ footer {
     .menu-btn {
         display: none;
     }
+    
     .header-links {
         display: block;
+        max-width: 811px;
+    }
+    .links-inner {
+        align-items: center;
+        justify-content: space-between;
+        gap: 40px;
+        width: 100%;
+        white-space: nowrap;
+        display: flex;
+        align-items: center;
+    }
+    .links-inner button {
+        padding: 20px 35px;
+        width: 19.85%;
+        white-space: nowrap;
+        font-size: 20px;
+        font-weight: 400;
+        line-height: 28px; /* 140% */
+        border-radius: 14px;
+        border: 1px solid var(--Dark);
+        background-color: transparent;
+    }
+    .header-links button:hover {
+        background-color: var(--Green);
+        color: var(--White);
     }
     .header-links ul {
         display: flex;
@@ -709,5 +740,76 @@ footer {
     }
     .header-links ul li:hover::after {
         width: 100%; 
+    }
+    .section-content-1 {
+        flex-direction: row;
+    }
+    .section-content-1{
+        display: none;
+    }
+    .section-content-1-desktop {
+        width: 100%;
+        padding-inline:100px ;
+        margin: 0 auto;
+        display: flex;
+        justify-content: space-between;
+    }
+    .desktop-left {
+        display: flex;
+        flex-direction: column;
+        gap: 35px;
+        max-width: 535px;
+        width: 42.82%;
+    }
+    .desktop-left h2 {
+        font-size: 60px;
+        font-weight: 500;
+        line-height: normal;
+    }
+    .desktop-left h3 {
+        font-size: 20px;
+        font-weight: 400;
+        line-height: 28px; 
+    }
+    .desktop-left button {
+        position: relative;
+        padding: 20px 35px;
+        background-color: var(--Dark);
+        color: var(--White);
+        font-size: 20px;
+        font-weight: 400;
+        line-height: 28px;
+        border-radius: 14px;
+        width: 40%;
+        white-space: nowrap;
+        overflow: hidden; 
+        transition: color 0.4s ease; 
+        z-index: 1;
+    }
+    
+    .desktop-left button::before {
+        content: '';
+        position: absolute;
+        top: 0;
+        right: -100%; 
+        width: 100%;
+        height: 100%;
+        background-color: var(--Grey); 
+        transition: right 0.25s ease; 
+        z-index: -1;
+    }
+    
+    .desktop-left button:hover::before {
+        right: 0;
+    }
+    
+    .desktop-left button:hover {
+        color: var(--Dark);
+    }
+    .desktop-right {
+        width: 48.38%;
+    }
+    .desktop-right img {
+        width:100%;
     }
 }
