--- a/assets/css/landing.css
+++ b/assets/css/landing.css
@@ -227,6 +227,13 @@ section {
     gap: 30px;
     padding-inline: 20px;
 }
+.services-bot-group {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    align-items: center;
+    gap: 30px;
+}
 .services-bot img {width: 100%;}
 .services-proposal {
     display: flex;
@@ -692,7 +699,6 @@ footer {
     }
     .links-inner button {
         padding: 20px 35px;
-        width: 19.85%;
         white-space: nowrap;
         font-size: 20px;
         font-weight: 400;
@@ -811,5 +817,46 @@ footer {
     }
     .desktop-right img {
         width:100%;
+    }
+    .section-content-2 {
+        width: 100%;
+        padding-inline: 100px;
+        flex-direction: row;
+        justify-content: space-between;
+    }
+    .company-top, .company-bot {
+        padding-inline: 0;
+        gap: 95px;
+        
+    }
+    .section-content-3 {
+        gap: 85px;
+    }
+    .services-top {
+        flex-direction: row;
+        gap: 40px;
+        padding-inline: 100px;
+        width: 57.90%;
+    }
+    .services-top h3 {
+        font-size: 40px;
+        font-weight: 500;
+        line-height: normal;
+    }
+    .services-top h4 {
+        font-size: 18px;
+        font-weight: 400;
+        line-height: normal;
+        text-align: start;
+    }
+
+
+    .services-bot-group {
+        padding-inline: 100px;
+        display: grid;
+        grid-template-columns: repeat(2, 1fr); /* 2 sütun, eşit genişlikte */
+        grid-gap: 40px; /* Resimler arası boşluk (isteğe bağlı) */
+        justify-content: space-between; /* Resimleri sütun içinde ortalar */
+        align-items: center; /* Resimleri satır içinde dikeyde ortalar */
     }
 }
