section 5 ve accordion tarafı desktop düzenlendi

--- a/assets/css/accordion.css
+++ b/assets/css/accordion.css
@@ -47,3 +47,8 @@
 .accordion-item.active .accordion-content {
     display: block;
 }
+@media (min-width:1206px) {
+    .accordion-item {
+        padding: 41px 60px;
+    }
+}
